cmake_minimum_required(VERSION 3.29)
project(OOP2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP2026 main.cpp)
add_executable(zad1 aud1/zad1.cpp)
add_executable(zad2 aud1/zad2.cpp)
add_executable(zad3 aud1/zad3.cpp)
add_executable(zad4 aud1/zad4.cpp)
add_executable(zad5 aud1/zad5.cpp)

add_executable(zad31 aud3/zad1.cpp)
add_executable(zad32 aud3/zad2.cpp)